tests/chapter_18/invalid_types/initializers/initialize_struct_with_scalar.c
int main(void) {
    struct pair {
        int x;
        int y;
    };

    struct pair p = 1;
}